--- a/saleapp/app/templates/layout/header.html
+++ b/saleapp/app/templates/layout/header.html
@@ -15,6 +15,10 @@
                 </li>
                 {% endfor %}
 
+                <li class="nav-item">
+                    <a class="nav-link active" href="/cart"> &#128722; <span class="badge bg-danger cart-counter">0</span></a>
+                </li>
+
                 {% if current_user.is_authenticated %}
                 <li class="nav-item">
                     <a class="nav-link text-danger" href="/">
